add llama ocr project

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -91,6 +91,7 @@
     "project_newsletter": "Her Story Madagascar Newsletter",
     "project_erp": "Custom ERP System",
     "project_mcq": "MCQ Sharing Platform",
+    "project_ocr": "AI-Powered Document Data Extraction",
     
     "contact_span": "Contact",
     "contact_title": "How to join me?",
