--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -91,7 +91,8 @@
     "project_newsletter": "Infolettre Her Story Madagascar",
     "project_erp": "Système ERP Personnalisé",
     "project_mcq": "Plateforme de Partage de QCM",
-    
+    "project_ocr": "Extraction de données documentaires par IA",
+
     "contact_span": "Contact",
     "contact_title": "Comment me joindre ?",
     "contact_address": "Adresse",
